--- a/src/App.css
+++ b/src/App.css
@@ -1,47 +1,15 @@
-:root {
-  --off-white: #fafafa;
-}
-.nav {
-  background-color: var(--off-white);
-  position: sticky;
-  top: 0px;
-  width: 100%;
-  height: 80px;
-  z-index: 1000;
-  box-shadow: 0 4px 14px 0 rgba(0, 0, 0, 0.15);
-}
 
 .nav-logo {
-  height: 60px;
   width: 60px;
 }
 
-.nav-logo:hover {
-  cursor: pointer;
-}
-
-.nav .nav-content {
-  max-width: 900px;
-  padding: 0rem 3rem;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 100%;
-}
-
-.nav-item {
-  display: inline;
-  margin-left: 2rem;
-  color: #333;
-}
-
-.nav-item:hover {
-  color: black;
-  cursor: pointer;
-}
 
 .section {
+  min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+  min-height: 80vh; /* These two lines are counted as one :-)       */
+
+  display: flex;
+  align-items: center;
 }
 
 .section-dark {
@@ -53,4 +21,16 @@
   max-width: 800px;
   margin: 0 auto;
   padding: 40px;
+}
+a{
+  font-family: 'Cutive Mono', monospace;
+}
+h1,h2, p{
+  font-family: 'Roboto Slab', serif;
+}
+@media (min-width:801px) {
+nav.navbar.navbar-expand-lg.navbar-light.bg-white{
+  padding-right: 250px;
+  padding-left: 250px;
+}
 }
